<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/orderField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/orderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderDate"/>

            <RadioButton
                android:id="@+id/orderPlane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderPlane"/>

            <RadioButton
                android:id="@+id/orderDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderDuration"/>

            <RadioButton
                android:id="@+id/orderPilot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderPilot"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/orderScope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/orderAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderAsc"/>

            <RadioButton
                android:id="@+id/orderDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderDesc"/>
        </RadioGroup>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/orderButton"/>
    </LinearLayout>
</ScrollView>