<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfDepartureSite"/>
        <Spinner
            android:id="@+id/dfDepartureSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dfDepartureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:inputType="datetime"
                android:hint="@string/dfDepartureDate"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfArrivalSite"/>
        <Spinner
            android:id="@+id/dfArrivalSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dfArrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:inputType="datetime"
                android:hint="@string/dfArrivalDate" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfPlane"/>
        <Spinner
            android:id="@+id/dfPlane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dfDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/dfDuration" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dfPilot"/>

        <Spinner
            android:id="@+id/dfPilot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/dfPilot"/>

        <Switch
            android:id="@+id/dfMonoPilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dfMonoPilot"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dfDayLandings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/dfDayLandings" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dfNightLandings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/dfNightLandings" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/dfSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dfSendButton"/>
    </LinearLayout>
</ScrollView>