<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lateralHeaderBackground"
    android:layout_width="fill_parent"
    android:layout_height="220dp"
    android:background="@drawable/lateral_header_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/backgroundLateralHeader"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/lateralHeaderImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_bookings"
            android:contentDescription="@string/profileImageDescription"/>

        <TextView
            android:id="@+id/lateralheaderUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lateralHeaderName"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/lateralheaderUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lateralHeaderUserType"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    </LinearLayout>
</FrameLayout>

