<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#B1B6D2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/profileImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:src="@drawable/contact_image"
                        android:contentDescription="@string/profileImageDescription"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp" >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profileName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profileName"
                            android:enabled="false"
                            android:inputType="textPersonName"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profileLastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profileLastname"
                            android:enabled="false"
                            android:inputType="textPersonName"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profileLandingField"
                        android:layout_marginTop="4dp"/>

                    <Spinner
                        android:id="@+id/profileLandingField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp" >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profileUserType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profileUserType"
                            android:enabled="false"
                            android:inputType="textPersonName"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profileUsernameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profileUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profileUsername"
                            android:inputType="textPersonName"
                            android:enabled="false"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profilePasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profilePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profilePassword"
                            android:inputType="textPassword"
                            android:enabled="false"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/profileRepeatPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/profileRepeatPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:visibility="invisible"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@mipmap/ic_edit"
            android:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>